[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-network-toolkit"
version = "1.0.0"
description = "A collection of Python networking tools — packet sniffer, netcat, TCP/UDP, SSH client/server/reverse-shell"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["network", "networking", "sockets", "tcp", "udp", "ssh", "packet-sniffer", "security", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = [
    "paramiko>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/brett-buskirk/python-network-toolkit"
Repository = "https://github.com/brett-buskirk/python-network-toolkit"
Issues = "https://github.com/brett-buskirk/python-network-toolkit/issues"

[project.scripts]
netsniff = "network_packet_sniffer.cli:main"
netk = "network_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true
