[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-packet-sniffer"
version = "0.1.0"
description = "A cross-platform packet capture utility that decodes and displays network traffic"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["network", "packet", "sniffer", "pcap", "cli", "security", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
    "Topic :: Utilities",
]

# No third-party runtime dependencies — pure stdlib.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/brett-buskirk/network-packet-sniffer"
Repository = "https://github.com/brett-buskirk/network-packet-sniffer"
Issues = "https://github.com/brett-buskirk/network-packet-sniffer/issues"

[project.scripts]
netsniff = "network_packet_sniffer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
python_version = "3.10"
